--- a/Project1/index.html
+++ b/Project1/index.html
@@ -5,7 +5,9 @@
 
 Hello Camper!
 
-For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
+For now, the test suite only works in Chrome! Please read the README below in 
+the JS Editor before beginning. Feel free to delete this message once you have 
+read it. Good luck and Happy Coding! 
 
 - The freeCodeCamp Team 
 
@@ -23,7 +25,8 @@ Design a tribute page to a Ezio Auditore from the Assassin's Creed Series.
 chriswolfdesign@gmail.com
 -->
 <!-- GOOGLE FONTS -->
-<link href="https://fonts.googleapis.com/css?family=Dosis|Lobster" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Dosis|Lobster" 
+rel="stylesheet">
 
 <main id="main">
   <div id="title">
@@ -37,7 +40,11 @@ chriswolfdesign@gmail.com
     </div>
   </div>
   <div id="tribute-info">
-    <p>Ezio was a fictional character in Ubisoft's Assassin's Creed series. He was one of the most popular characters and was given the most screen time. Unlike other assassins, who only received one game each, Ezio was featured in his own trilogy.
+    <p>
+      Ezio was a fictional character in Ubisoft's Assassin's Creed series. He 
+      was one of the most popular characters and was given the most screen 
+      time. Unlike other assassins, who only received one game each, Ezio was 
+      featured in his own trilogy.
       <p>Ezio was featured in the following games:</p>
       <ol>
         <li>Assassin's Creed II</li>
@@ -51,6 +58,10 @@ chriswolfdesign@gmail.com
         <li>Removing the Borgia from power in Italy.</li>
         <li>Discovering the Library of Altair Ibn La'Ahd</li>
       </ul>
-      <p>To learn more about this character, visit his <a id="tribute-link" href="http://assassinscreed.wikia.com/wiki/Ezio_Auditore_da_Firenze" target="_blank">Wikipedia Page</a>!</p>
+      <p>
+        To learn more about this character, visit his <a id="tribute-link" 
+        href="http://assassinscreed.wikia.com/wiki/Ezio_Auditore_da_Firenze" 
+        target="_blank">Wikipedia Page</a>!
+      </p>
   </div>
 </main>
