--- a/Project2/index.html
+++ b/Project2/index.html
@@ -6,7 +6,9 @@
 
 Hello Camper!
 
-For now, the test suite only works in Chrome! Please read the README below in the JS Editor before beginning. Feel free to delete this message once you have read it. Good luck and Happy Coding! 
+For now, the test suite only works in Chrome! Please read the README below in 
+the JS Editor before beginning. Feel free to delete this message once you have 
+read it. Good luck and Happy Coding! 
 
 - The freeCodeCamp Team 
 
@@ -27,19 +29,32 @@ chriswolfdesign@gmail.com
 
 <main id="main">
   <u><h1 id="title">Programming Experience Survey</h1></u>
-  <p id="description">This is a survey to analyze your prior programming experience.  Thank you for taking my survey.</p>
+  <p id="description">
+    This is a survey to analyze your prior programming 
+    experience.  Thank you for taking my survey.
+  </p>
   <form id="survey-form">
     <label id="name-label" for="name">
-      <p>* Name: <input type="text" id="name" placeholder="Your name" required /></p>
+      <p>* Name: <input type="text" id="name" placeholder="Your name" 
+        required /></p>
     </label>
     <label id="email-label" for="email">
-      <p>* E-mail Address: <input type="email" id="email" placeholder="Your e-mail address" required /></p>
+      <p>
+        * E-mail Address: <input type="email" id="email" 
+        placeholder="Your e-mail address" required />
+      </p>
     </label>
     <label id="number-label" for="number">
-      <p>Phone Number: <input type="number" min="000-000-0000" max="999-999-9999" id="number" placeholder="Your phone number" /></p>
+      <p>
+        Phone Number: <input type="number" min="000-000-0000" 
+        max="999-999-9999" id="number" placeholder="Your phone number" />
+      </p>
     </label>
     <label id="years-label" for="years">
-      <p>* How many years have you been programming? <input type="number" min="0" max="100" id="years" placeholder="Year" required /></p>
+      <p>
+        * How many years have you been programming? <input type="number" 
+        min="0" max="100" id="years" placeholder="Year" required />
+      </p>
     </label>
     <label id="select-label" for="label">
      <p>
@@ -66,13 +81,15 @@ chriswolfdesign@gmail.com
         <input type="checkbox" name="editors" value="sublime">sublime text<br>
         <input type="checkbox" name="editors" value="vim">vim<br>
         <input type="checkbox" name="editors" value="emacs">emacs<br>
-        <input type="checkbox" name="editors" value="jetbrains">Webstorm/Jet Brains<br>
+        <input type="checkbox" name="editors" value="jetbrains">Webstorm/Jet 
+          Brains<br>
         <input type="checkbox" name="editors" value="other">Other<br>
       </p>
     </label>
     <label id="textarea-label" for="textarea">
       <p>
-        Is there anything else you would like to let me know about your programming experience?<br><br>
+        Is there anything else you would like to let me know about your 
+        programming experience?<br><br>
         <textarea rows="5" cols="60">
           Enter additional information here.
         </textarea>
